--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,40 @@
  *= require_tree .
  *= require_self
  */
+
+ #message {
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin: 0;
+ }
+
+ #submit {
+  background-color: rgb(68, 124, 247);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin: 0;
+ }
+
+ #submit:hover{
+  opacity: 0.5;
+ }
+
+ .user, .coach {
+  width: 450px;
+  background-color: antiquewhite;
+  border-radius: 3px;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border-left: solid 3px grey;
+ }
+
+ a {
+  text-decoration: none;
+ }
+
+ a:hover {
+  opacity: 0.5;
+ }
